--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="kernels.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <div id="input-buttons">
@@ -136,7 +136,7 @@
 <script src="https://webgl2fundamentals.org/webgl/resources/jquery-1.7.1.min.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/jquery.tablednd_0_5.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
-<script src="kernels.js"></script>
+<script src="index.js"></script>
 <script>
   function switchToKernel() {
     document.getElementById("filter-input").style.display = 'none';
